test_regress/t/t_tagged_case.out
%Warning-SHORTREAL: t/t_tagged_case.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_tagged_case.v:25:5: Unsupported: void (for tagged unions)
   25 |     void Invalid;
      |     ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_case.v:31:5: Unsupported: void (for tagged unions)
   31 |     void          Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:40:5: Unsupported: void (for tagged unions)
   40 |     void        Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:61:5: Unsupported: void (for tagged unions)
   61 |     void    Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:67:5: Unsupported: void (for tagged unions)
   67 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:76:5: Unsupported: void (for tagged unions)
   76 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:83:5: Unsupported: void (for tagged unions)
   83 |     void   Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:89:5: Unsupported: void (for tagged unions)
   89 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:98:5: Unsupported: void (for tagged unions)
   98 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:122:9: Unsupported: tagged union
  122 |     v = tagged Invalid;
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:124:5: Unsupported: case matches (for tagged union)
  124 |     case (v) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:125:7: Unsupported: tagged union
  125 |       tagged Invalid : result = 1;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:126:7: Unsupported: '{} tagged patterns
  126 |       tagged Valid .n : result = n;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:126:20: Unsupported: '{} tagged patterns
  126 |       tagged Valid .n : result = n;
      |                    ^
%Error-UNSUPPORTED: t/t_tagged_case.v:131:9: Unsupported: tagged union
  131 |     v = tagged Valid (123);
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:133:5: Unsupported: case matches (for tagged union)
  133 |     case (v) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:134:7: Unsupported: tagged union
  134 |       tagged Invalid : result = -1;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:135:7: Unsupported: '{} tagged patterns
  135 |       tagged Valid .n : result = n;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:135:20: Unsupported: '{} tagged patterns
  135 |       tagged Valid .n : result = n;
      |                    ^
%Error-UNSUPPORTED: t/t_tagged_case.v:140:10: Unsupported: tagged union
  140 |     wt = tagged Wide60 (60'hFEDCBA987654321);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:142:5: Unsupported: case matches (for tagged union)
  142 |     case (wt) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:143:7: Unsupported: tagged union
  143 |       tagged Invalid : wide60_result = 0;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:144:7: Unsupported: '{} tagged patterns
  144 |       tagged Wide60 .w : wide60_result = w;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:144:21: Unsupported: '{} tagged patterns
  144 |       tagged Wide60 .w : wide60_result = w;
      |                     ^
%Error-UNSUPPORTED: t/t_tagged_case.v:150:10: Unsupported: tagged union
  150 |     wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:152:5: Unsupported: case matches (for tagged union)
  152 |     case (wt) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:153:7: Unsupported: tagged union
  153 |       tagged Invalid : wide90_result = 0;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:154:7: Unsupported: '{} tagged patterns
  154 |       tagged Wide90 .w : wide90_result = w;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:154:21: Unsupported: '{} tagged patterns
  154 |       tagged Wide90 .w : wide90_result = w;
      |                     ^
%Error-UNSUPPORTED: t/t_tagged_case.v:160:10: Unsupported: tagged union
  160 |     wt = tagged Byte8NonZeroLSB (8'hA5);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:162:5: Unsupported: case matches (for tagged union)
  162 |     case (wt) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:163:7: Unsupported: '{} tagged patterns
  163 |       tagged Byte8NonZeroLSB .b : result = b;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:163:30: Unsupported: '{} tagged patterns
  163 |       tagged Byte8NonZeroLSB .b : result = b;
      |                              ^
%Error-UNSUPPORTED: t/t_tagged_case.v:169:10: Unsupported: tagged union
  169 |     wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:171:5: Unsupported: case matches (for tagged union)
  171 |     case (wt) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:172:7: Unsupported: '{} tagged patterns
  172 |       tagged Word32LittleEndian .w : result = w;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:172:33: Unsupported: '{} tagged patterns
  172 |       tagged Word32LittleEndian .w : result = w;
      |                                 ^
%Error-UNSUPPORTED: t/t_tagged_case.v:178:10: Unsupported: tagged union
  178 |     at = tagged Arr '{10, 20, 30, 40};
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:180:5: Unsupported: case matches (for tagged union)
  180 |     case (at) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:181:7: Unsupported: tagged union
  181 |       tagged Invalid : result = -1;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:182:7: Unsupported: '{} tagged patterns
  182 |       tagged Scalar .s : result = s;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:182:21: Unsupported: '{} tagged patterns
  182 |       tagged Scalar .s : result = s;
      |                     ^
%Error-UNSUPPORTED: t/t_tagged_case.v:183:7: Unsupported: '{} tagged patterns
  183 |       tagged Arr .a : result = a[0] + a[1] + a[2] + a[3];
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:183:18: Unsupported: '{} tagged patterns
  183 |       tagged Arr .a : result = a[0] + a[1] + a[2] + a[3];
      |                  ^
%Error-UNSUPPORTED: t/t_tagged_case.v:188:13: Unsupported: tagged union
  188 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:188:25: Unsupported: tagged union
  188 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:190:5: Unsupported: case matches (for tagged union)
  190 |     case (instr) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:191:7: Unsupported: '{} tagged patterns
  191 |       tagged Add .* : result = -1;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:191:18: Unsupported: '{} tagged patterns
  191 |       tagged Add .* : result = -1;
      |                  ^~
%Error-UNSUPPORTED: t/t_tagged_case.v:192:7: Unsupported: tagged union
  192 |       tagged Jmp (tagged JmpU .a) : result = a;
      |       ^~~~~~
%Error: Exiting due to
